--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Aulas de git</title>
   </head>
   <body>
-    <h1>Desfazendo o último commit</h1>
+    <h1>Git Clone</h1>
   </body>
 </html>
